--- a/resources/config.yml
+++ b/resources/config.yml
@@ -16,6 +16,6 @@ claim:
     # First 4 fields are required, enchants are optional
     # You can have unlimited enchants, just follow the format "EnchantName:EnchantLevel:EnchantName:EnchantLevel" etc
     # There is also support for PiggyCustomEnchants, use same format as normal enchants
-    - "diamond_sword:0:1:Vote Sword:sharpness:5:unbrealing:3"
+    - "diamond_sword:0:1:Vote Sword:sharpness:5:unbreaking:3"
     - "diamond_pickaxe:0:1:default:efficiency:2:driller:3"
 ...
