--- a/resources/config.yml
+++ b/resources/config.yml
@@ -6,9 +6,16 @@ claim:
   # {real-name} - The voter's full username
   # {display-name} - The voter's display name
   # & - Change message color
+  # {x} - Voter's X coordinate
+  # {floor-x} - Voter's X coordinate rounded
+  # {y} - Voter's Y coordinate
+  # {floor-y} - Voter's Y coordinate rounded
+  # {z} - Voter's Z coordinate
+  # {floor-z} - Voter's Z coordinate rounded
   broadcast: "{real-name} has voted for free rewards!" # Message to be broadcast when a player votes
-  message: "Thanks for voting for out server" # Message to send to the player who voted
+  message: "Thanks for voting for our server" # Message to send to the player who voted
   items:
+    # Items to be given to the player when they vote
     # Item format: "ItemName:Damage:ICount:CustomName:EnchantName:EnchantLevel"
     # Item IDs are not supported, use the item names instead
     # Replace spaces with "_" for item names
@@ -18,4 +25,9 @@ claim:
     # There is also support for PiggyCustomEnchants, use same format as normal enchants
     - "diamond_sword:0:1:Vote Sword:sharpness:5:unbreaking:3"
     - "diamond_pickaxe:0:1:default:efficiency:2:driller:3"
+  commands:
+    # Commands to be executed by console when a player votes
+    # Do not include "/" at the start of the command
+    - "title {real-name} title &aVote"
+    - "title {real-name} subtitle &7Thanks for voting!"
 ...
